fix: account 中间件验证
