# api/v1/account/service.pb.validate.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
-// source: v1/account/account.proto
+// source: v1/account/service.proto
 
 package account
 
