# api/v1/manager/service.pb.validate.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
-// source: v1/manager/manager.proto
+// source: v1/manager/service.proto
 
 package manager
 
